--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ resume_section_publications:    true
 resume_section_art_exhibitions: true
 #resume_section_links:           true
 #resume_section_associations:    true
-resume_section_interests:       true
+#resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
